--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,9 @@
   </head>
 
   <body>
+    <%if user_signed_in? %>
     <%= render "users/header" %>
+    <%end%>
       <div class="container", style="min-height: 83vh;">
         <p class="notice"><%= notice %></p>
         <p class="alert"><%= alert %></p>
