--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,33 @@
  *= require_tree .
  *= require_self
  */
+
+ @import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600&family=Merriweather:wght@400;700&family=Montserrat:wght@400;700&display=swap');
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+:root {
+  --primary-font: 'Merriweather', serif;
+  --secondary-font: 'Montserrat', sans-serif;
+  --tertiary-font: 'Barlow Semi Condensed', sans-serif;
+  --primary-color: #2c6ff3;
+  --secondary-color: #f54749;
+  --tertiary-color: #e6e6e6;
+}
+
+.main-container {  
+  padding: 1.25rem 1.25rem;
+}
+
+.btn {
+  padding: 0.3rem 0.6rem;
+  border: none;
+  border-radius: 5px;
+}
+
+ @import "recipe.css";
+ @import "form.css";
