--- a/app/views/users/_header.html.erb
+++ b/app/views/users/_header.html.erb
@@ -1,10 +1,10 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
+      <%= link_to 'Recipe App', root_path, class: 'navbar-brand d-flex align-items-center col-md-3 mb-2 mb-md-0 text-decoration-none'%>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom" id="navbarNav">
-      <%= link_to 'Recipe App', root_path, class: 'navbar-brand d-flex align-items-center col-md-3 mb-2 mb-md-0 text-decoration-none'%>
+    <div class="collapse navbar-collapse d-flex flex-wrap align-items-center justify-content-md-between" id="navbarNav">
       <ul class="navbar-nav nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
         <li class="nav-item">
         <%= link_to 'Foods', foods_path, class: 'nav-link'%>
