add view for public recipes

--- a/app/views/users/_header.html.erb
+++ b/app/views/users/_header.html.erb
@@ -12,7 +12,9 @@
         <li class='nav-item'>
           <%= link_to 'Recipe List', recipes_path, class: 'nav-link'%>
         </li>
-         <li class='nav-link'>Public Recipes</li>
+        <li class='nav-item'>
+          <%= link_to 'Public Recipes', public_recipes_path, class: 'nav-link'%>
+        </li>
           <li class='nav-link'>Shopping List</li>
       </ul>
       <div class="col-md-3 text-end">
