--- a/app/views/recipes/_recipe_details.html.erb
+++ b/app/views/recipes/_recipe_details.html.erb
@@ -1,35 +1,34 @@
-<div class="conatiner shadow m-5 p-5">
-  <h1><%= @recipe.name %></h1>
+<div class="container shadow p-5">
+  <h1 class="text-center mb-4"><%= @recipe.name %></h1>
 
-  <div class="d-flex justify-content-between" >
+  <div class="d-flex justify-content-between align-items-center mb-4">
     <div>
-      <span class="h5 mb-4">Preparation time:</span> 
-      <span> <%= @recipe.preparation_time %></span>  
-    </div>  
+      <span class="h5">Preparation time:</span>
+      <span> <%= @recipe.preparation_time %></span>
+    </div>
     <div>
-      <label for="toggle-public">Public</label>
-      <input type="checkbox" id="toggle-public" <%= @recipe.public ? "checked" : "" %> >
+      <div class="form-check form-switch">
+        <input class="form-check-input" type="checkbox" id="toggle-public" <%= @recipe.public ? "checked" : "" %>>
+        <label class="form-check-label" for="toggle-public">Public</label>
+      </div>
     </div>
   </div>
 
-  <div class="mt-3">
-    <span class="h5 mb-4">Cooking time: </span>
+  <div class="mb-3">
+    <span class="h5">Cooking time: </span>
     <span><%= @recipe.cooking_time %> </span>
   </div>
 
-  <div class="mt-3 mb-3">
+  <div class="mb-3">
     <span class="h5">Description</span>
-    <p class=""><%= @recipe.description %></p>
+    <p class="mt-2"><%= @recipe.description %></p>
   </div>
 
-  <div class="d-flex justify-content-between mt-3" >
-    <%# <%= link_to "Generate shopping list", shopping_lists_path, class: "btn green"%> %>
-    <%# <%= link_to "Add ingredient", new_recipe_path(@recipe.id), class: "btn green"%> %>
+  <div class="d-flex justify-content-between mb-3">
+    <%= link_to "Add ingredient", new_recipe_recipe_food_path(@recipe.id), class: "btn btn-primary" %>
   </div>
 
-  <%# <%= render "recipe_food", recipe: recipe %>
-
-    <table class="table table-white mt-4">
+  <table class="table table-striped">
     <thead>
       <tr>
         <th scope="col">Food</th>
@@ -39,19 +38,18 @@
       </tr>
     </thead>
     <tbody>
-        <% @recipe_foods.each do |recipe_food| %>
-            <tr class="odd:bg-white even:bg-green-100">
-              <td class="border border-slate-300 py-2"><%= recipe_food.food.name %></td>
-              <td class="border border-slate-300 py-2"><%= recipe_food.quantity %></td>
-              <td class="border border-slate-300 py-2">$<%= recipe_food.quantity * recipe_food.food.price %></td>
-              <td class="border border-slate-300 py-2">
-                <% if current_user == recipe_food.recipe.user %>
-                  <%= button_to 'Remove', recipe_recipe_food_path(@recipe, recipe_food), method: :delete, class: "bg-red-300 px-2 py-1 rounded-lg hover:bg-red-500 hover:text-white" %>
-                <% end %>
-              </td>
-            </tr>
-          <% end %>
-
+      <% @recipe_foods.each do |recipe_food| %>
+        <tr>
+          <td><%= recipe_food.food.name %></td>
+          <td><%= recipe_food.quantity %></td>
+          <td>$<%= recipe_food.quantity * recipe_food.food.price %></td>
+          <td>
+            <% if current_user == recipe_food.recipe.user %>
+              <%= button_to 'Remove', recipe_recipe_food_path(@recipe, recipe_food), method: :delete, class: "btn btn-danger" %>
+            <% end %>
+          </td>
+        </tr>
+      <% end %>
     </tbody>
   </table>
 </div>
