--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,17 +10,45 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+
+     <style>
+      html,
+      body {
+        height: 100%;
+        min-height: 100%;
+      }
+      /* .container {
+        height: 100%;
+      } */
+    </style>
   </head>
 
   <body>
-    <%if user_signed_in? %>
-    <%= render "users/header" %>
-    <%end%>
-      <div class="container", style="min-height: 83vh;">
-        <p class="notice"><%= notice %></p>
-        <p class="alert"><%= alert %></p>
-        <%= yield %>
-      </div>
-    <%= render "users/footer" %>
+    <% if user_signed_in? %>
+      <%= render "shared/header" %>
+    <% end %>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6 mt-3">
+      <% if notice %>
+        <div class="alert alert-dismissible alert-success">
+          <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+          <%= notice %>
+        </div>
+      <% end %>
+      
+      <% if alert %>
+        <div class="alert alert-dismissible alert-danger">
+          <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+          <%= alert %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+  
+  <%= yield %>
+</div>
+    <%= render "shared/footer" %>
   </body>
 </html>
+
