- Make bootstrap improvement to foods table

--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -1,29 +1,36 @@
-<div class="container">
-  <h1>Foods list</h1>
-  
-  <table class="table table-bordered table-hover">
-    <thead class="table-info">
-      <tr>
-        <th>Food</th>
-        <th>Measurement unit</th>
-        <th>Unit price</th>
-        <th>Actions</th>
-      </tr>
-    </thead>
-  
-    <tbody>
-      <% @foods.each do |food| %>
-        <tr>
-          <th class="align-middle"><%= food.name %></th>
-          <td class="align-middle"><%= food.measurement_unit %></td>
-          <td class="align-middle">$<%= food.price %></td>
-          <td class="align-middle"><%= button_to 'Delete', food_url(food), method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-outline-danger btn-sm" %></td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
-  
-  <br>
-  
-  <%= link_to 'Add Food', new_food_path, class: "btn btn-info"%>
+<div class="container my-5">
+  <div class="row">
+    <div class="col">
+      <table class="table table-striped">
+        <thead class="table-dark">
+          <tr>
+            <th scope="col">Food</th>
+            <th scope="col">Measurement Unit</th>
+            <th scope="col">Unit Price</th>
+            <th scope="col">Action</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @foods.each do |food| %>
+            <tr>
+              <td><%= food.name %></td>
+              <td><%= food.measurement_unit %></td>
+              <td>$ <%= food.price %></td>
+              <td>
+                <%= button_to raw("<i class=\"bi bi-x-circle\"></i> Delete"),
+                    food_path(:id => food.id),
+                    class: "btn btn-danger",
+                    :method => :delete %>
+              </td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col text-end">
+      <%= link_to "Add Food", new_food_path, class: "btn btn-outline-dark mt-3" %>
+    </div>
+  </div>
 </div>
