--- a/app/views/foods/new.html.erb
+++ b/app/views/foods/new.html.erb
@@ -1,10 +1,1 @@
-<div  class="container">
-  <div class="text-center">
-		<h1>Add new food</h1>
-	</div>
-		<%= render 'form', food: @food %>
-		<div class="text-center">
-		<%= link_to 'Back', url_for(:back) %>
-		</div>
-	</div>
-</div>
+<%= render 'shared/add_food' %>
