--- a/app/views/shared/_add_food.html.erb
+++ b/app/views/shared/_add_food.html.erb
@@ -1,4 +1,4 @@
-<%= form_with url: foods_path, html: { class: "container shadow m-5 p-5" } do |form| %>
+<%= form_with url: foods_path, html: { class: "container shadow p-5" } do |form| %>
   <h3 class="mb-3">Add New Food</h3>
   <div class="row mb-3">
     <div class="col-12 col-md-3">
