--- a/app/views/recipes/_recipe_details.html.erb
+++ b/app/views/recipes/_recipe_details.html.erb
@@ -28,6 +28,10 @@
     <%= link_to "Add ingredient", new_recipe_recipe_food_path(@recipe.id), class: "btn btn-primary" %>
   </div>
 
+  <div class="d-flex justify-content-between mb-3">
+    <%= link_to "Generate Shopping List", recipe_shopping_lists_path(@recipe), class: "btn btn-primary" %>
+  </div>
+
   <table class="table table-striped">
     <thead>
       <tr>
