--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -16,7 +16,7 @@
           <%= link_to 'Public Recipes', public_recipes_path, class: 'nav-link'%>
         </li>
         <li class='nav-item'>
-          <span class='nav-link'>Shopping List</span>
+          <%= link_to 'Shopping List', shopping_lists_path, class: 'nav-link'%>
         </li>
       </ul>
       <div class="d-flex">
