--- a/app/assets/stylesheets/form.css
+++ b/app/assets/stylesheets/form.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 1.5rem;
 }
 
 .new-recipe-form > h1 {
@@ -13,8 +12,7 @@
 }
 
 .new-recipe-form > form {
-  width: 70%;
-  padding: 1.5rem 2.5rem;
+  padding: 1.5rem;
   border: 1px solid #e6e6e6;
   border-radius: 10px;
   font-family: var(--secondary-font);
