--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,10 +13,10 @@
 
      <style>
       html,
-      body {
+      /* body {
         height: 100%;
         min-height: 100%;
-      }
+      } */
       /* .container {
         height: 100%;
       } */
@@ -27,7 +27,7 @@
     <% if user_signed_in? %>
       <%= render "shared/header" %>
     <% end %>
-<div class="container">
+<div class="container" style="height: 90vh;">
   <div class="row">
     <div class="col-md-6 mt-3">
       <% if notice %>
