--- a/app/views/recipes/_recipe_details.html.erb
+++ b/app/views/recipes/_recipe_details.html.erb
@@ -1,4 +1,4 @@
-<div class="container shadow p-5">
+<div class="container shadow p-5 recipe_details">
   <h1 class="text-center mb-4"><%= @recipe.name %></h1>
 
   <div class="d-flex justify-content-between align-items-center mb-4">
@@ -8,7 +8,7 @@
     </div>
     <div>
       <div class="form-check form-switch">
-        <input class="form-check-input" type="checkbox" id="toggle-public" <%= @recipe.public ? "checked" : "" %>>
+        <input disabled class="form-check-input" type="checkbox" id="toggle-public" <%= @recipe.public ? "checked" : "" %>>
         <label class="form-check-label" for="toggle-public">Public</label>
       </div>
     </div>
@@ -25,11 +25,8 @@
   </div>
 
   <div class="d-flex justify-content-between mb-3">
-    <%= link_to "Add ingredient", new_recipe_recipe_food_path(@recipe.id), class: "btn btn-primary" %>
-  </div>
-
-  <div class="d-flex justify-content-between mb-3">
     <%= link_to "Generate Shopping List", recipe_shopping_lists_path(@recipe), class: "btn btn-primary" %>
+    <%= link_to "Add ingredient", new_recipe_recipe_food_path(@recipe.id), class: "btn btn-primary" %>
   </div>
 
   <table class="table table-striped">
